fixing layout & scrollbars

--- a/site/style.css
+++ b/site/style.css
@@ -17,17 +17,28 @@ body {
   padding :0;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 20px;
-  width: 1024px;
-  margin: 0 auto;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  overflow-y: auto;
 }
 
 #app {
   position: absolute;
   top: 0;
   left: 0;
-  height: 100vh;
   width: 100vw;
-  overflow: auto;
+  height: 100vh;
+  padding:0;
+  margin: 0;
+}
+
+article {
+  margin: 0 auto;
+  max-width: 960px;
+  height: 100vh;
+  margin: auto;
+  padding: 10px;
 }
 
 html {
@@ -78,12 +89,6 @@ h1 {
 
 nav a {
   margin-right: 10px;
-}
-
-article {
-  max-width: 960px;
-  margin: auto;
-  padding: 10px;
 }
 
 .warning {
